--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator Jejak Karbon</title>
     <link rel="stylesheet" href="home.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <section>
         <div class="container">
             <h1> Ayo Selamatkan Bumi Dengan<br><strong>Menghitung Emisi Karbonmu</strong></h1>
+\
             <p class="subtext">Tahukah Anda? Setiap aktivitas yang kita lakukan menghasilkan jejak karbon. 
               Dengan menghitung emisi karbon dari penggunaan energi di sekitar Anda, 
               Anda dapat mengambil langkah nyata untuk masa depan yang lebih hijau. 
               Mulai sekarang, hitung jejak karbon Anda dan jadilah bagian dari perubahan!</p>
             <button><a href="pilih.html" class="btn btn-green">Hitung Jejak Karbon</a></button>
+            <img src="foto.jpg" alt="" class="foto">
         </div>
     </section>
 </body>
