--- a/ac.html
+++ b/ac.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Kalkulator AC (PK)</title>
   </head>
   <body>
     <header>
-      <button><a href="pilih.html">Kembali</a></button>
+      <button><a href="./pilih.html">Kembali</a></button>
       <h2>AC/Pendingin ruangan</h2>
     </header>
     <main>
@@ -54,12 +54,12 @@
         <div>
           <p id="resultac"></p>
           <button onclick="hitungac()">
-            <a href="history.html">Lanjut</a>
+            <a href="./history.html">Lanjut</a>
           </button>
         </div>
       </section>
     </main>
     <footer></footer>
   </body>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </html>
