--- a/history.html
+++ b/history.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histori Penggunaan Listrik</title>
-    <link rel="stylesheet" href="history.css">
+    <link rel="stylesheet" href="./history.css">
 </head>
 <body>
     <header>
-        <button><a href="pilih.html">Kembali</a></button>
+        <button><a href="./pilih.html">Kembali</a></button>
         <h2>History Penggunaan</h2>
     </header>
     <main class="container">
@@ -17,11 +17,11 @@
         </div>
         <div class="button-container">
             <button class="button-bawah"  onclick="clearHistory()">Hapus <span>Semua Histori</span></button>
-            <a href="pilih.html"><button class="button-bawah"> Tambah +</button></a>
+            <a href="./pilih.html"><button class="button-bawah"> Tambah +</button></a>
         </div>
     </main>
     <footer></footer>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
