--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator Jejak Karbon</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="./home.css">
 </head>
 <body>
     <section>
@@ -15,7 +15,7 @@
               Dengan menghitung emisi karbon dari penggunaan energi di sekitar Anda, 
               Anda dapat mengambil langkah nyata untuk masa depan yang lebih hijau. 
               Mulai sekarang, hitung jejak karbon Anda dan jadilah bagian dari perubahan!</p>
-            <button><a href="pilih.html" class="btn btn-green">Hitung Jejak Karbon</a></button>
+            <button><a href="./pilih.html" class="btn btn-green">Hitung Jejak Karbon</a></button>
             <img src="foto.jpg" alt="" class="foto">
         </div>
     </section>
