--- a/kendaraan.html
+++ b/kendaraan.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Kalkulator Jejak Karbon</title>
   </head>
   <body>
     <header>
-      <button><a href="pilih.html">Kembali</a></button>
+      <button><a href="./pilih.html">Kembali</a></button>
       <h2>Jejak Karbon Kendaraan</h2>
     </header>
     <main>
@@ -52,11 +52,10 @@
         </div>
         <p id="result"></p>
         <button onclick="">
-          <a href="history.html">Lanjut</a>
+          <a href="./history.html">Lanjut</a>
         </button>
       </section>
     </main>
-    <
   </body>
   <footer></footer>
   <script src="script.js"></script>
