--- a/pilih.html
+++ b/pilih.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="pilih.css" />
+    <link rel="stylesheet" href="./pilih.css" />
     <title>Document</title>
   </head>
   <body>
     <header>
-      <button><a href="index.html">Kembali</a></button>
+      <button><a href="./index.html">Kembali</a></button>
       <h2>Kategori Kalkualtor</h2>
     </header>
     <main>
-      <button><a href="konsumlistrik.html">Konsumsi Listrik Wilayah</a></button>
-      <button><a href="elektronik.html">Alat Elektronik</a></button>
-      <button><a href="ac.html">AC (Pendingin Ruangan)</a></button>
+      <button><a href="./konsumlistrik.html">Konsumsi Listrik Wilayah</a></button>
+      <button><a href="./elektronik.html">Alat Elektronik</a></button>
+      <button><a href="./ac.html">AC (Pendingin Ruangan)</a></button>
     </main>
     <footer></footer>
   </body>
