--- a/konsumlistrik.html
+++ b/konsumlistrik.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Kalkulator Karbon Penggunaan Listrik</title>
   </head>
   <body>
     <header>
-      <button><a href="pilih.html">Kembali</a></button>
+      <button><a href="./pilih.html">Kembali</a></button>
       <h2>Penggunaan Listrik Wilayah</h2>
     </header>
     <main>
@@ -39,7 +39,7 @@
       <div>
         <p id="result"></p>
         <button onclick="hitungwilayah()">
-          <a href="history.html">Lanjut</a>
+          <a href="./history.html">Lanjut</a>
         </button>
       </div>
     </main>
